--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
-pandas
-matplotlib
-seaborn
-wordcloud
-scikit-learn
-joblib
-xgboost
+numpy==2.3.2
+pandas==2.3.2
+matplotlib==3.10.6
+seaborn==0.13.2
+wordcloud==1.9.4
+scikit-learn==1.7.1
+joblib==1.5.2
+xgboost==3.0.4
